Decoupled "start encoding after scan" option in Picker from the "automatically queue after scanning" option. The "start encoding after scan" option will now automatically start encoding after queuing multiple files.

--- a/VidCoder/View/PickerWindow.xaml
+++ b/VidCoder/View/PickerWindow.xaml
@@ -1019,10 +1019,9 @@
 									IsChecked="{Binding AutoQueueOnScan}" />
 
 								<CheckBox
-									Margin="20 6 0 0"
+									Margin="0 6 0 0"
 									Content="{x:Static res:PickerRes.AutoEncodeOnScanCheckBox}"
-									IsChecked="{Binding AutoEncodeOnScan}"
-									IsEnabled="{Binding AutoQueueOnScan}" />
+									IsChecked="{Binding AutoEncodeOnScan}" />
 							</StackPanel>
 
 							<!--  Post-encoding  -->
