Removed pastebin functionality for logs, and replaced with a menu option to report a problem with an completed encode.

--- a/VidCoder/View/Main.xaml
+++ b/VidCoder/View/Main.xaml
@@ -295,7 +295,7 @@
 						Source="/Icons/copy.png" />
 				</MenuItem.Icon>
 			</MenuItem>
-			<MenuItem Command="{Binding CopyLogToPastebin}" Header="{x:Static res:LogRes.CopyToPastebinButton}" />
+			<MenuItem Command="{Binding CopyLogAndReportProblem}" Header="{x:Static res:MainRes.CopyLogAndReportMenuItem}" />
 			<Separator />
 			<MenuItem
 				Command="{Binding ProcessingService.RetryFailed}"
