--- a/VidCoder/View/Panels/SizingPanel.xaml
+++ b/VidCoder/View/Panels/SizingPanel.xaml
@@ -94,7 +94,39 @@
 					SelectedValue="{Binding CroppingType}"
 					SelectedValuePath="Value" />
 
-				<Grid Width="121" Margin="0 6 0 0">
+				<StackPanel
+					Margin="0 6 0 0"
+					Orientation="Horizontal"
+					Visibility="{Binding CroppingType,
+					                     Converter={StaticResource EnumVisibilityConverter},
+					                     ConverterParameter={x:Static commonModel:VCCroppingType.Automatic}}">
+					<StackPanel.ToolTip>
+						<TextBlock Style="{StaticResource LongToolTip}" Text="{x:Static res:EncodingRes.MinimumCroppingToolTip}" />
+					</StackPanel.ToolTip>
+					<TextBlock VerticalAlignment="Center" Text="{x:Static res:EncodingRes.MinimumCroppingLabel}" />
+					<controls:NumberBox
+						Height="23"
+						MinWidth="40"
+						Margin="6 0 0 0"
+						AllowEmpty="False"
+						Minimum="2"
+						Modulus="2"
+						Number="{Binding CroppingMinimum,
+						                 Mode=TwoWay}" />
+				</StackPanel>
+				<CheckBox
+					Margin="0 6 0 0"
+					Content="{x:Static res:EncodingRes.ConstrainToOneAxisCheckBox}"
+					IsChecked="{Binding CroppingConstrainToOneAxis}"
+					Visibility="{Binding CroppingType,
+					                     Converter={StaticResource EnumVisibilityConverter},
+					                     ConverterParameter={x:Static commonModel:VCCroppingType.Automatic}}">
+					<CheckBox.ToolTip>
+						<TextBlock Style="{StaticResource LongToolTip}" Text="{x:Static res:EncodingRes.ConstrainToOneAxisToolTip}" />
+					</CheckBox.ToolTip>
+				</CheckBox>
+
+				<Grid Width="121" Margin="0 10 0 0">
 					<controls:NumberBox
 						Width="45"
 						Height="23"
